syntax = "proto3";

package frontend.cart;

import "api.proto";
import "frontend/common.proto";

option go_package = "/frontend/cart";

service CartService {
  rpc AddCartItem(AddCartItemReq) returns (common.Empty) {
    option (api.post) = "/cart";
  }
  rpc GetCart(common.Empty) returns (common.Empty) {
    option (api.get) = "/cart";
  }
}

message AddCartItemReq {
  uint64 spu_id = 1 [(api.form) = "spuId"];
  uint64 sku_id = 2 [(api.form) = "skuId"];
  int32 product_num = 3 [(api.form) = "productNum"];
}